:wheelchair: style: Correção de acessibilidade

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Github Status</title>
   </head>
   <body>
-    <div id="root"></div>
+
+    <!-- Adicionando a tag <main> -->
+    <main id="root" role="main"></main>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
